--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: "Tina + Mark"
+title: "Desri + Ross"
 description: |
-    San Ramon, California
+    London
 
-    November 11, 2018
-owner: Mark Cerqueira
-first_published: 2017
-email: mark@mark.gg
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.tinaandmark.com" # the base hostname & protocol for your site
+    20 January 2020
+owner: Ross Ewart
+first_published: 2019
+email: forsey+wedding@gmail.com
+baseurl: "/ross-desri-wedding-site" # the subpath of your site, e.g. /blog
+url: "https://theon.github.io/ross-desri-wedding-site" # the base hostname & protocol for your site
 
 social:
-  github: https://github.com/markcerqueira/wedding-site
+  github: https://github.com/theon/ross-desri-wedding-site
 
 # Build settings
 markdown: kramdown
